# rust_typescript_communication

./: readme.md
graphql/: readme.md
graphql/client/: codegen.ts  package-lock.json  package.json  tsconfig.json
graphql/client/src/: App.tsx  index.ts  main.tsx
graphql/client/src/gql/: graphql.ts
graphql/client/src/zeus/: const.ts  index.ts
graphql/server/: Cargo.toml  schema.graphql
graphql/server/src/: main.rs
grpc/: package-lock.json  readme.md
grpc/client/src/: test.client.ts  test.ts
grpc/client/src/components/: HelloWorld.vue
grpc/proto/: test.proto
grpc/server/: Cargo.toml
grpc/server/src/: main.rs
grpc/tonic_server/: build.rs
grpc/tonic_server/src/: main.rs
grpc/vue_client/: package.json
grpc/vue_client/src/: test.ts
grpc/vue_client/src/components/: HelloWorld.vue
openapi/: readme.md
openapi/client/: openapi-ts.config.ts  package-lock.json  package.json  tsconfig.app.json
openapi/client/src/: openapi-typescript-schema.d.ts
openapi/client/src/components/: HelloWorld.vue
openapi/client/src/openapi/: schemas.gen.ts  services.gen.ts  types.gen.ts
openapi/server/: Cargo.toml  openapi.yaml
openapi/server/src/: main.rs
openapi/server2/: Cargo.toml  openapi.yaml
openapi/server2/src/: main.rs
rspc/: readme.md
rspc/client/: package-lock.json  package.json  tsconfig.json
rspc/client/src/: bindings.ts  counter.ts  main.ts
rspc/server/: Cargo.toml
rspc/server/src/: main.rs
tonic_server/: Cargo.toml  build.rs
tonic_server/proto/: test.proto
tonic_server/src/: main.rs
vue_client/: package-lock.json  package.json
vue_client/src/components/: HelloWorld.vue
vue_client/src/tmp/: test.client.ts  test.ts
