[package]
name = "test_tonic_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
prost = "0.13.1"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = "0.1.15"
tonic = "0.12.1"
tonic-web = "0.12.1"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.12.1"
