[package]
name = "test_oasgen"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
http = "1.1.0"
oasgen = { version = "0.20.1", features = ["axum", "swagger-ui"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.124"
serde_yaml = "0.9.34"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
