[package]
name = "test_rspc"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
rspc = "0.2.0"
rspc-axum = { version ="0.1.1", features = ["ws"]}
serde = "1.0.207"
specta = "1.0.5"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features= ["cors"] }
